// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import-generator/import imports collections to a Liferay Site: addFragmentCollection 1`] = `
Array [
  "1234",
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import imports collections to a Liferay Site: addFragmentCollection 2`] = `
Array [
  "1234",
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import imports collections to a Liferay Site: addFragmentCollection 3`] = `
Array [
  "1234",
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import imports fragments to a Liferay site: addFragmentEntry 1`] = `
Array [
  "1234",
  "sample-collection",
  "sample-component-fragment",
  Object {
    "css": ".fragment { color: inherit; }
",
    "fragmentConfiguration": "{
  \\"fieldSets\\": []
}
",
    "html": "<div>Fragment</div>
",
    "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
    "name": "Sample component fragment name",
    "status": 0,
    "type": 1,
  },
]
`;

exports[`import-generator/import imports fragments to a Liferay site: addFragmentEntry 2`] = `
Array [
  "1234",
  "sample-collection",
  "sample-fragment",
  Object {
    "css": ".fragment { color: inherit; }
",
    "fragmentConfiguration": "{
  \\"fieldSets\\": []
}
",
    "html": "<div>Fragment</div>
",
    "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
    "name": "Sample fragment name",
    "status": 0,
    "type": 0,
  },
]
`;

exports[`import-generator/import imports fragments to a Liferay site: addFragmentEntry 3`] = `
Array [
  "1234",
  "sample-collection",
  "sample-section-fragment",
  Object {
    "css": ".fragment { color: inherit; }
",
    "fragmentConfiguration": "{
  \\"fieldSets\\": []
}
",
    "html": "<div>Fragment</div>
",
    "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
    "name": "Sample section fragment name",
    "status": 0,
    "type": 0,
  },
]
`;

exports[`import-generator/import imports fragments to a Liferay site: addFragmentEntry 4`] = `
Array [
  "1234",
  "sample-collection",
  "sample-fragment",
  Object {
    "css": ".fragment { color: inherit; }
",
    "fragmentConfiguration": "{
  \\"fieldSets\\": []
}
",
    "html": "<div>Fragment</div>
",
    "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
    "name": "Sample fragment name",
    "status": 0,
    "type": 0,
  },
]
`;

exports[`import-generator/import imports fragments to a Liferay site: addFragmentEntry 5`] = `
Array [
  "1234",
  "sample-collection",
  "sample-fragment",
  Object {
    "css": ".fragment { color: inherit; }
",
    "fragmentConfiguration": "",
    "html": "<div>Fragment</div>
",
    "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
    "name": "Sample fragment name",
    "status": 0,
    "type": 0,
  },
]
`;

exports[`import-generator/import imports fragments to a Liferay site: updateFragmentCollection 1`] = `
Array [
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import imports fragments to a Liferay site: updateFragmentCollection 2`] = `
Array [
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import imports fragments to a Liferay site: updateFragmentCollection 3`] = `
Array [
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import updates collections if they already exist: addFragmentEntry 1`] = `
Array [
  "1234",
  "sample-collection",
  "sample-component-fragment",
  Object {
    "css": ".fragment { color: inherit; }
",
    "fragmentConfiguration": "{
  \\"fieldSets\\": []
}
",
    "html": "<div>Fragment</div>
",
    "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
    "name": "Sample component fragment name",
    "status": 0,
    "type": 1,
  },
]
`;

exports[`import-generator/import updates collections if they already exist: addFragmentEntry 2`] = `
Array [
  "1234",
  "sample-collection",
  "sample-fragment",
  Object {
    "css": ".fragment { color: inherit; }
",
    "fragmentConfiguration": "{
  \\"fieldSets\\": []
}
",
    "html": "<div>Fragment</div>
",
    "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
    "name": "Sample fragment name",
    "status": 0,
    "type": 0,
  },
]
`;

exports[`import-generator/import updates collections if they already exist: addFragmentEntry 3`] = `
Array [
  "1234",
  "sample-collection",
  "sample-section-fragment",
  Object {
    "css": ".fragment { color: inherit; }
",
    "fragmentConfiguration": "{
  \\"fieldSets\\": []
}
",
    "html": "<div>Fragment</div>
",
    "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
    "name": "Sample section fragment name",
    "status": 0,
    "type": 0,
  },
]
`;

exports[`import-generator/import updates collections if they already exist: addFragmentEntry 4`] = `
Array [
  "1234",
  "sample-collection",
  "sample-fragment",
  Object {
    "css": ".fragment { color: inherit; }
",
    "fragmentConfiguration": "{
  \\"fieldSets\\": []
}
",
    "html": "<div>Fragment</div>
",
    "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
    "name": "Sample fragment name",
    "status": 0,
    "type": 0,
  },
]
`;

exports[`import-generator/import updates collections if they already exist: addFragmentEntry 5`] = `
Array [
  "1234",
  "sample-collection",
  "sample-fragment",
  Object {
    "css": ".fragment { color: inherit; }
",
    "fragmentConfiguration": "",
    "html": "<div>Fragment</div>
",
    "js": "/* global fragmentElement */

fragmentElement.style.color = 'inherit';
",
    "name": "Sample fragment name",
    "status": 0,
    "type": 0,
  },
]
`;

exports[`import-generator/import updates collections if they already exist: updateFragmentCollection 1`] = `
Array [
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import updates collections if they already exist: updateFragmentCollection 2`] = `
Array [
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import updates collections if they already exist: updateFragmentCollection 3`] = `
Array [
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import updates fragments if they already exist: updateFragmentCollection 1`] = `
Array [
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import updates fragments if they already exist: updateFragmentCollection 2`] = `
Array [
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;

exports[`import-generator/import updates fragments if they already exist: updateFragmentCollection 3`] = `
Array [
  "sample-collection",
  "Sample collection name",
  "Sample collection description",
]
`;
